test/visibility/private/uses/accessExcept.good
exceptStillWorks.chpl:11: In function 'main':
exceptStillWorks.chpl:14: error: 'b' undeclared (first use this function)
accessExcept.chpl:3: error: 'a' undeclared (first use this function)
