test/visibility/private/uses/accessExcept.compopts
exceptStillWorks.chpl --main-module accessExcept
